[package]
name = "rust_wasm_example"
version = "0.1.0"
authors = ["19年梦醒 <3949379+getong@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
ceph = "3.2.5"
clickhouse = "0.6.2"
wasi = "0.10.2"
wasm-bindgen = "0.2.73"
